Fading für einzelne States

--- a/MG2.html
+++ b/MG2.html
@@ -13,7 +13,7 @@
 		<div id="flashContent">
 			<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="1280" height="720" id="MG2" align="middle">
 				<param name="movie" value="MG2.swf" />
-				<param name="quality" value="best" />
+				<param name="quality" value="high" />
 				<param name="bgcolor" value="#ffffff" />
 				<param name="play" value="true" />
 				<param name="loop" value="true" />
@@ -26,7 +26,7 @@
 				<!--[if !IE]>-->
 				<object type="application/x-shockwave-flash" data="MG2.swf" width="1280" height="720">
 					<param name="movie" value="MG2.swf" />
-					<param name="quality" value="best" />
+					<param name="quality" value="high" />
 					<param name="bgcolor" value="#ffffff" />
 					<param name="play" value="true" />
 					<param name="loop" value="true" />
